Closed
Bug 1684812
Opened 5 years ago
Closed 5 years ago
Unreported heap-unclassified memory for "webrender::lru_cache::LRUCache
Categories
(Core :: Graphics: WebRender, defect)
Core
Graphics: WebRender
Tracking
()
RESOLVED
FIXED
86 Branch
Tracking | Status | |
---|---|---|
firefox86 | --- | fixed |
People
(Reporter: whimboo, Assigned: nical)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
As mentioned some days ago on bug 1683418 comment 14, there is some unreported heap-unclassified memory reported for:
Unreported {
1 block in heap block record 2 of 28,178
6,291,456 bytes (6,291,456 requested / 0 slop)
1.16% of the heap (16.04% cumulative)
2.48% of unreported (34.37% cumulative)
Allocated at {
#01: webrender::lru_cache::LRUCache$LT$T$C$M$GT$::push_new::h6a65c4ab408245f8 (/Applications/FirefoxNightly.app/Contents/MacOS/XUL + 0x1e58bf3)
#02: webrender::texture_cache::TextureCache::update::h62ccba8fa9967591 (/Applications/FirefoxNightly.app/Contents/MacOS/XUL + 0x1f22e2b)
#03: webrender::glyph_rasterizer::GlyphRasterizer::resolve_glyphs::h5d797af1637041a7 (/Applications/FirefoxNightly.app/Contents/MacOS/XUL + 0x1e4e657)
#04: webrender::resource_cache::ResourceCache::block_until_all_resources_added::h77820f7fc55f1262 (/Applications/FirefoxNightly.app/Contents/MacOS/XUL + 0x1edd881)
#05: webrender::frame_builder::FrameBuilder::build::h8982c90aa15c67cb (/Applications/FirefoxNightly.app/Contents/MacOS/XUL + 0x1e3ff58)
#06: webrender::render_backend::Document::build_frame::h6309c66151279e80 (/Applications/FirefoxNightly.app/Contents/MacOS/XUL + 0x1e8d39a)
#07: webrender::render_backend::RenderBackend::update_document::h89733c58807a70ac (/Applications/FirefoxNightly.app/Contents/MacOS/XUL + 0x1e98c44)
#08: webrender::render_backend::RenderBackend::process_api_msg::hc6f86c5a790f865d (/Applications/FirefoxNightly.app/Contents/MacOS/XUL + 0x1e914d8)
#09: std::sys_common::backtrace::__rust_begin_short_backtrace::hbc52f05dc39174fc (/Applications/FirefoxNightly.app/Contents/MacOS/XUL + 0x1dd1698)
#10: core::ops::function::FnOnce::call_once$u7b$$u7b$vtable.shim$u7d$$u7d$::h64dcf9fb95f1065e (/Applications/FirefoxNightly.app/Contents/MacOS/XUL + 0x5952590)
#11: std::sys::unix::thread::Thread::new::thread_start::he3e6719579180a65 (/Applications/FirefoxNightly.app/Contents/MacOS/XUL + 0x44e71d)
#12: _pthread_start (/usr/lib/system/libsystem_pthread.dylib + 0x6109)
#13: thread_start (/usr/lib/system/libsystem_pthread.dylib + 0x1b8b)
}
}
I can only test on Mac but I assume it will happen cross-platform.
Updated•5 years ago
|
Flags: needinfo?(nical.bugzilla)
Assignee | ||
Comment 1•5 years ago
|
||
Updated•5 years ago
|
Assignee: nobody → nical.bugzilla
Status: NEW → ASSIGNED
Pushed by nsilva@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/4cad80b0f389
Report texture cache's LRU cache memory. r=jrmuizel
Assignee | ||
Updated•5 years ago
|
Flags: needinfo?(nical.bugzilla)
Reporter | ||
Comment 3•5 years ago
|
||
This only moves allocated memory into the reporter. So it doesn't change the memory footprint at all.
Keywords: memory-footprint
Comment 4•5 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox86:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch
Comment 5•5 years ago
|
||
== Change summary for alert #28419 (as of Thu, 14 Jan 2021 05:22:36 GMT) ==
Improvements:
Ratio | Suite | Test | Platform | Options | Absolute values (old vs new) |
---|---|---|---|---|---|
9% | Heap Unclassified | windows10-64-shippable-qr | 57,218,242.47 -> 51,806,234.43 | ||
8% | Heap Unclassified | windows10-64-shippable-qr | 56,139,926.23 -> 51,731,431.46 | ||
4% | Heap Unclassified | macosx1014-64-shippable-qr | 110,320,870.56 -> 105,930,107.21 |
For up to date results, see: https://treeherder.mozilla.org/perfherder/alerts?id=28419
You need to log in
before you can comment on or make changes to this bug.
Description
•