Bug 1684812 - Report texture cache's LRU cache memory. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D100931