gfx/wr/webrender/src/render_api.rs
@@ -1537,6 +1537,7 @@ pub struct MemoryReport {
     pub vertex_data_textures: usize,
     pub render_target_textures: usize,
     pub texture_cache_textures: usize,
+    pub texture_cache_structures: usize,
     pub depth_target_textures: usize,
     pub texture_upload_pbos: usize,
     pub swap_chain: usize,
